# move-alerts-rust

./: Cargo.toml  Dockerfile  compose.yml
src/: main.rs
