[package]
name = "move-alerts-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.0", features = [ "native-tls" ] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.11", features = ["json"] }
anyhow = "1.0"
chrono = "0.4"

[profile.release]
target = "x86_64-unknown-linux-gnu"